--- a/nlp-p1/pom.xml
+++ b/nlp-p1/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-	<groupId>ejp-sp-nlp-p1</groupId>
-	<artifactId>ejp-sp-nlp-p1</artifactId>
+	<groupId>nlp-p1</groupId>
+	<artifactId>nlp-p1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
     <parent>
         <groupId>org.deeplearning4j</groupId>
@@ -10,7 +10,7 @@
         <version>0.9.1</version>
     </parent>
 
-	<name>nlp-project1-mod8</name>
+	<name>nlp-project1</name>
     <repositories>
         <repository>
             <id>snapshots-repo</id>
